--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Présentation Intranet MRP - Emmanuel Moity</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Slide principale d'introduction -->
@@ -216,6 +216,6 @@
     <button onclick="nextSlide()">Suivant →</button>
 </div>
 
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
