--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Présentation Intranet MRP - Emmanuel Moity</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <!-- Slide principale d'introduction -->
 <div class="slide" id="slide-0">
     <h1>Présentation du projet Intranet MRP</h1>
     <h2>Emmanuel Moity - AFPA Développeur Web & Web Mobile</h2>
+
+    <div class="qr-section">
+        <p><i class="fa-solid fa-qrcode"></i> Scannez ce QR Code pour accéder directement à la présentation depuis votre smartphone :</p>
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://mrtirmoatsu.github.io/presentation-intranet-mrp/" alt="QR Code vers la présentation">
+  </div>
+    </div>
 </div>
 
 <!-- Slide 1 -->
@@ -216,6 +222,6 @@
     <button onclick="nextSlide()">Suivant →</button>
 </div>
 
-<script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
