--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="slide" id="slide-2" style="display: none;">
   <h2><i class="fas fa-graduation-cap"></i> Contexte de formation</h2>
   <p><strong>Formation :</strong> Titre Professionnel Développeur Web & Web Mobile (AFPA).</p>
-  <p><strong>Période :</strong> Du 20 novembre 2024 au 19 septembre 2025.</p>
+  <p><strong>Période :</strong> Du 23 septembre 2024 au 15 juillet 2025.</p>
   <p><strong>Projet :</strong> Conception d’un intranet pour une organisation roleplay (Martinique RP).</p>
 
   <h3><i class="fas fa-tools"></i> Environnement technique :</h3>
